# kcpp

./: CMakeLists.txt  Makefile  README.md  main.cpp
include/: Launcher.h  Project.h  WorkExampleOne.h  utils.h
src/: Launcher.cpp  main.cpp  project.cpp
src/zadanie1/: WorkexampleOne.cxx
tasks/Cwiczenie1/: CMakeLists.txt  in.txt  main.cpp
tasks/Cwiczenie1/Reference/: LChar.cc
tasks/Cwiczenie1/include/: ZadCharExample.h  ZadClassExample.h  ZadEnumExample.h  ZadMainExample.h  ZadStringExample.h
tasks/Cwiczenie1/src/: ZadCharExample.cc  ZadClassExample.cc  ZadEnumExample.cc  ZadMainExample.cc  ZadStringExample.cc
tasks/Cwiczenie2/: CMakeLists.txt  main.cpp
tasks/Cwiczenie2/include/: ZadPrzeciazanieDodaj.h  ZadPrzeciazaniePlus.h  ZadPrzeciazaniePole.h  ZadPrzeciazaniePotega.h  ZadPrzekazywanieTablic.h  ZadPrzekazywanieTablicKopia.h  ZadZwracanie.h
tasks/Cwiczenie2/src/: ZadPrzeciazanieDodaj.cc  ZadPrzeciazaniePlus.cc  ZadPrzeciazaniePole.cc  ZadPrzeciazaniePotega.cc  ZadPrzekazywanieTablic.cc  ZadPrzekazywanieTablicKopia.cc  ZadZwracanie.cc
tasks/Cwiczenie3/: CMakeLists.txt  main.cpp
tasks/Cwiczenie3/include/: ZadAdresowaniePamieci.h  ZadArytmetykaWskaznikow.h  ZadArytmetykaWskaznikowKopiowanie.h  ZadArytmetykaWskaznikowPrzesuniecie.h  ZadArytmetykaWskaznikowRoznica.h  ZadArytmetykaWskaznikowSuma.h  ZadArytmetykaWskaznikowTablica2D.h  ZadArytmetykaWskaznikowTabliceA.h  ZadArytmetykaWskaznikowTabliceB.h  ZadArytmetykaWskaznikowZamiana.h  ZadArytmetykaWskaznikowZnajdowanie.h  ZadBitoweOperatoryLogiczneSingleVariable.h  ZadOperatoryPrzypisania.h
tasks/Cwiczenie3/src/: ZadAdresowaniePamieci.cc  ZadArytmetykaWskaznikow.cc  ZadArytmetykaWskaznikowKopiowanie.cc  ZadArytmetykaWskaznikowPrzesuniecie.cc  ZadArytmetykaWskaznikowRoznica.cc  ZadArytmetykaWskaznikowSuma.cc  ZadArytmetykaWskaznikowTablica2D.cc  ZadArytmetykaWskaznikowTabliceA.cc  ZadArytmetykaWskaznikowTabliceB.cc  ZadArytmetykaWskaznikowZamiana.cc  ZadArytmetykaWskaznikowZnajdowanie.cc  ZadBitoweOperatoryLogiczneSingleVariable.cc  ZadOperatoryPrzypisania.cc
tasks/Cwiczenie4/: CMakeLists.txt  main.cpp
tasks/Cwiczenie4/include/: ZadCandCPP.h  ZadCinCoutFile.h  ZadDaneNaukoweFormat.h  ZadForA.h  ZadGra.h  ZadKsztalt.h  ZadManipulacjaStrumieniemCout.h  ZadParzysta.h  ZadParzystaCase.h  ZadPetle.h  ZadPreprocesor.h  ZadSilnia.h  ZadStringStream.h  ZadStudent.h  ZadSwitch.h  ZadTabelaFormat.h  ZadTemperaturaFormat.h  ZadWhileA.h
tasks/Cwiczenie4/src/: ZadCandCPP.cc  ZadCinCoutFile.cc  ZadDaneNaukoweFormat.cc  ZadForA.cc  ZadGra.cc  ZadKsztalt.cc  ZadManipulacjaStrumieniemCout.cc  ZadParzysta.cc  ZadParzystaCase.cc  ZadPetle.cc  ZadPreprocesor.cc  ZadSilnia.cc  ZadStringStream.cc  ZadStudent.cc  ZadSwitch.cc  ZadTabelaFormat.cc  ZadTemperaturaFormat.cc  ZadWhileA.cc
tasks/Cwiczenie5/: CMakeLists.txt  main.cpp
tasks/Cwiczenie5/include/: ZadClass.h  ZadKlasaKonstruktor.h  ZadMetodyAbstrakcyjne.h  ZadPrzyjazn.h  ZadStruct.h  ZadStructKonstruktor.h  ZadUnia.h
tasks/Cwiczenie5/src/: ZadClass.cc  ZadKlasaKonstruktor.cc  ZadMetodyAbstrakcyjne.cc  ZadPrzyjazn.cc  ZadStruct.cc  ZadStructKonstruktor.cc  ZadUnia.cc
tasks/Task1/: CMakeLists.txt  main.cpp
tasks/Task1/include/: MathUtils.h
tasks/Task1/src/: MathUtils.cpp
tasks/Task2/: CMakeLists.txt  main.cpp
tasks/Task2/include/: Shape.h
tasks/Task2/src/: Shape.cpp
tasks/Task3/: CMakeLists.txt  in.txt  main.cpp
